fix handler user register
