# docs/swagger.json
@@ -9,23 +9,6 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/genpass": {
-            "get": {
-                "description": "Generate a new password",
-                "tags": [
-                    "password"
-                ],
-                "summary": "Generate a new password",
-                "responses": {
-                    "200": {
-                        "description": "12345678",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/health-check": {
             "get": {
                 "description": "ping and pong with redis server",
@@ -44,7 +27,7 @@
                 }
             }
         },
-        "/v1/links/shorten": {
+        "/links/shorten": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -77,7 +60,7 @@
                 }
             }
         },
-        "/v1/links/shorten/{code}": {
+        "/links/shorten/{code}": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -104,7 +87,7 @@
                 }
             }
         },
-        "/v1/user/register": {
+        "/v1/users/register": {
             "post": {
                 "description": "Create a new user",
                 "consumes": [
